# loan-approval-ai-system

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  bash.exe.stackdump  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.yml
backend/: .coveragerc  .dockerignore  Dockerfile  entrypoint.sh  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml
backend/config/: celery.py  env_validation.py  logging_filters.py  middleware.py  ops_auth.py  urls.py  wsgi.py
backend/docs/: BASELINE_LIFT.md  CALIBRATION_SOURCES.md  COMPLIANCE.md  LOAD_TEST_BASELINE.md  MODEL_CARD.md  RUNBOOK.md  SECRETS_ROTATION.md  SECURITY.md  SLA.md
backend/ml_models/: golden_metrics.json
backend/scripts/: __init__.py  benchmark_gmsc.py
backend/tests/: conftest.py  test_2fa_enforcement.py  test_adaptive_model_sampling.py  test_address_service.py  test_adverse_action.py  test_api_budget.py  test_api_budget_fallback.py  test_api_budget_provider_audit.py  test_api_contract.py  test_api_contracts.py  test_approval_reasons_factors.py  test_apra_calibration.py  test_audit_fixes.py  test_australian_compliance.py  test_auth.py  test_auth_security.py  test_backfill_psi_by_feature.py  test_backfill_reference_distribution.py  test_batch_orchestrate_cap.py  test_benchmark_gmsc.py  test_benchmark_resolver.py  test_bias_calibration.py  test_bias_detector.py  test_celery_config.py  test_celery_integration.py  (+94 more)
(+964 files in other folders)
