[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-approval-backend"
version = "1.8.2"
description = "Australian loan approval AI system — Django backend"
requires-python = ">=3.13"

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [
  "migrations",
  "staticfiles",
  "manage.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "DJ"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
  "integration: integration tests requiring services",
]
